--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -4,7 +4,7 @@
     text-align: center;
     background-color: #282c34;
     min-height: 100vh;
-    color: white;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +18,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    background-color: #282c34;
 
-    height: 300vh;
+    height: 200vh;
+    width: 100%;
 }
