--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -4,10 +4,22 @@
     text-align: center;
     background-color: #282c34;
     min-height: 100vh;
-    color: white;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
+}
+
+.background {
+    background-image: url("https://cdn.thewirecutter.com/wp-content/media/2021/07/boardgames-2048px-2233.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-color: #282c34;
+
+    height: 200vh;
+    width: 100%;
 }
