--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,5 +1,5 @@
 /* You should probably replace this with your own CSS */
-
+/*
 .App {
     text-align: center;
     background-color: #282c34;
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-}
+} */
 
 .background {
     background-image: url("https://cdn.thewirecutter.com/wp-content/media/2021/07/boardgames-2048px-2233.jpg");
@@ -22,4 +22,76 @@
 
     height: 200vh;
     width: 100%;
+}
+
+.game-list {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.game-item {
+    background-color: white;
+    padding: 10px;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+}
+
+.game-background {
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    color: white;
+    overflow: hidden;
+    position: relative;
+
+}
+
+.game-details {
+background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    max-width: 300px;
+    color: white;
+    position: relative;
+    width: 50%;
+    clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
+}
+
+.game-details h4, .game-details p {
+    margin: 0;
+    color: white;
+}
+
+.game-header {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+}
+
+.game-details-container {
+    background-color: #fff;
+    padding: 20px 30px;
+    max-width: 800px;
+    margin: 40px auto;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    color: #333;
+}
+
+.navbar-nav .nav-link {
+    padding: 10px 20px;
+}
+
+.navbar-brand img {
+    height: 80px;
+    width: auto;
 }
