--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -206,3 +206,35 @@ background-color: rgba(0, 0, 0, 0.8);
     opacity: 1;
     filter: grayscale(100%);
 }
+
+.password-input-wrapper {
+    position: relative;
+}
+
+.password-toggle-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 20px;
+    color: #555;
+}
+
+@media (max-width: 1200px) {
+    .main-content {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 900px) {
+    .main-content {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .main-content {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
