--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -115,6 +115,7 @@ background-color: rgba(0, 0, 0, 0.8);
     size: 100vh;
     align-items: center;
     text-align: center;
+    justify-content: center;
 
 }
 .dashboard-container {
@@ -140,60 +141,9 @@ background-color: rgba(0, 0, 0, 0.8);
     filter: grayscale(100%);
 }
 
-/* .dashboard-container:hover {
-    opacity: 1;
+#dashboard {
+    align-items: center;
 }
-
-.overlay {
-    position: relative;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #008cba
-}
-
-.overlay-text {
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.image {
-    position: relative;
-}
-
-.image img {
-    vertical-align: center;
-}
-
-.image:after {
-    content:'Edit Profile';
-    aspect-ratio: 1;
-    border-radius: 50%;
-    color:#fff;
-    position:absolute;
-    width: 100%; height:100%;
-    top: 0;; left:0;
-    background:rgba(0,0,0,0.6);
-    opacity:0;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-}
-
-.image:hover:after {
-    opacity:1;
-} */
 
 .signup-button:hover{
     color: #2f3530;
