--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -192,3 +192,33 @@ background-color: rgba(0, 0, 0, 0.8);
         grid-template-columns: repeat(1, 1fr);
     }
 }
+
+.meetup-card {
+    position: relative;
+    top: 0;
+    left: 1%;
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    background-color: #000000da;
+    /* clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%); */
+    transition: opacity .3s ease-out 100ms;
+}
+
+.meetup-card:hover {
+    opacity: 1;
+
+}
+
+.meetup-details {
+    position: relative;
+    top: 0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    max-width: 300px;
+    color: white;
+    /* clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%); */
+}
