--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -51,7 +51,7 @@
     overflow: hidden;
 }
 
-.game-background {
+.detail-background {
     background-size: cover;
     background-position: center;
     height: 300px;
@@ -65,7 +65,7 @@
 
 }
 
-.game-details {
+.details {
 background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
     max-width: 300px;
@@ -75,12 +75,15 @@ background-color: rgba(0, 0, 0, 0.8);
     clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
 }
 
-.game-details h4, .game-details p {
+.details h4, .details p {
     margin: 0;
     color: white;
 }
 
-.game-header {
+.detail-header {
+    margin-top: 80px;
+    background-size: cover;
+    background-position: center;
     color: white;
     display: flex;
     align-items: center;
@@ -88,7 +91,7 @@ background-color: rgba(0, 0, 0, 0.8);
     height: 300px;
 }
 
-.game-details-container {
+.details-container {
     background-color: #fff;
     padding: 20px 30px;
     max-width: 800px;
