--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -15,7 +15,11 @@
  .App {
     text-align: center;
     background-color: #282c34;
-    background-image: url(img/Board-buddies-bg.png);
+    background-image: url(img/Torch_Wall_15.jpg);
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     min-height: 100vh;
     color: rgb(0, 0, 0);
     display: flex;
@@ -187,4 +191,34 @@ background-color: rgba(0, 0, 0, 0.8);
     .main-content {
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+.meetup-card {
+    position: relative;
+    top: 0;
+    left: 1%;
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    background-color: #000000da;
+    /* clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%); */
+    transition: opacity .3s ease-out 100ms;
+}
+
+.meetup-card:hover {
+    opacity: 1;
+
+}
+
+.meetup-details {
+    position: relative;
+    top: 0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    max-width: 300px;
+    color: white;
+    /* clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%); */
 }
