--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -47,6 +47,20 @@
     gap: 5px;
 }
 
+.game-details {
+    text-justify: center;
+    position: relative;
+    top: 0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    max-width: 300px;
+    color: white;
+    /* clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%); */
+}
+
 .game-item {
     background-color: white;
     padding: 10px;
@@ -55,7 +69,7 @@
     overflow: hidden;
 }
 
-.detail-background {
+.game-background {
     background-size: cover;
     background-position: center;
     height: 300px;
@@ -202,7 +216,7 @@ background-color: rgba(0, 0, 0, 0.8);
     left: 1%;
     height: 100%;
     width: 100%;
-    opacity: 1;
+    opacity: 0;
     background-color: #000000da;
     /* clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%); */
     transition: opacity .3s ease-out 100ms;
