--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -49,11 +49,12 @@
 }
 
 .game-item {
-    background-color: white;
+    /* background-color: white; */
     padding: 10px;
     display: flex;
     position: relative;
     overflow: hidden;
+    background-color: rgba(47, 47, 47, 0.8)
 }
 
 .game-background {
@@ -97,15 +98,16 @@
 }
 
 .details-container {
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 20px 30px;
     max-width: 800px;
     margin: 40px auto;
-    border-radius: 15px;
+
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: white;
+    background-color: rgba(47, 47, 47, 0.8);
 }
 .navbar {
     background-color: rgba(30, 30, 30, 0.7);
@@ -182,7 +184,7 @@
 .meetup-card {
     position: relative;
     top: 0;
-    left: 0%;
+    left: 0;
     height: 100%;
     width: 100%;
     opacity: 0;
@@ -204,7 +206,7 @@
     width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
-    max-width: 300px;
+    max-width: 350px;
     color: white;
     clip-path: polygon(0 0, 95% 0, 95% 100%, 0% 100%);
 }
